package com.springmicroservice.lowleveldesignproblems.ruleengine.domain.model;

public enum ExpenseType {
    RESTAURANT,
    JEWELLERY,
    AIRFARE,
    ENTERTAINMENT
}
