package com.springmicroservice.lowleveldesignproblems.ruleengine.interfaces;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
@AllArgsConstructor
public class Violations {
    private String description;
}
