@startuml
class com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.MaxRestaurantsAmountRule {
+ Optional<Violations> validate(List<Expense>)
}

class com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.EntertainmentExpenseRule {
+ Optional<Violations> validate(Expense)
}

interface com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.SingleExpenseRule {
~ Optional<Violations> validate(Expense)
}

class com.springmicroservice.lowleveldesignproblems.ruleengine.domain.model.Violations {
- String description
}

class com.springmicroservice.lowleveldesignproblems.ruleengine.domain.model.Expense {
- Long id
- Long tripId
- Double amount
- ExpenseType expenseType
- String description
- String vendorName
}

interface com.springmicroservice.lowleveldesignproblems.ruleengine.repository.ExpenseRepository {
}
class com.springmicroservice.lowleveldesignproblems.ruleengine.api.RuleEngineHandler {
- RuleEngineService ruleEngineService
+ <<Create>> RuleEngineHandler(RuleEngineService)
+ List<Violations> evaluateExpense(List<Expense>)
}


class com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.AirfareExpenseRule {
+ Optional<Violations> validate(Expense)
}

class com.springmicroservice.lowleveldesignproblems.ruleengine.domain.engine.ExpenseEvaluatorEngine {
- List<SingleExpenseRule> singleExpenseRules
- List<MultiExpenseRule> multiExpenseRules
+ List<Violations> validate(List<Expense>)
}


class com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.TwoFiftyMaxRule {
+ Optional<Violations> validate(Expense)
}

enum com.springmicroservice.lowleveldesignproblems.ruleengine.domain.model.ExpenseType {
+  RESTAURANT
+  JEWELLERY
+  AIRFARE
+  ENTERTAINMENT
}

class com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.RestaurantExceedsRule {
+ Optional<Violations> validate(Expense)
}

class com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.MaxTripAmountRule {
+ Optional<Violations> validate(List<Expense>)
}

interface com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.MultiExpenseRule {
~ Optional<Violations> validate(List<Expense>)
}

class com.springmicroservice.lowleveldesignproblems.ruleengine.application.RuleEngineService {
- ExpenseEvaluatorEngine engine
+ <<Create>> RuleEngineService()
+ List<Violations> execute(List<Expense>)
}




com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.MultiExpenseRule <|.. com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.MaxRestaurantsAmountRule
com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.SingleExpenseRule <|.. com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.EntertainmentExpenseRule
org.springframework.data.jpa.repository.JpaRepository <|-- com.springmicroservice.lowleveldesignproblems.ruleengine.repository.ExpenseRepository
com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.SingleExpenseRule <|.. com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.AirfareExpenseRule
com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.SingleExpenseRule <|.. com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.TwoFiftyMaxRule
com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.SingleExpenseRule <|.. com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.RestaurantExceedsRule
com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.MultiExpenseRule <|.. com.springmicroservice.lowleveldesignproblems.ruleengine.domain.rule.MaxTripAmountRule
@enduml